# prop-amm-challenge

./: .gitignore  Cargo.toml  README.md  starter.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: build.rs  compile.rs  mod.rs  run.rs  validate.rs
crates/executor/src/: lib.rs  loader.rs  native.rs  syscalls.rs  vm.rs
crates/shared/src/: config.rs  instruction.rs  lib.rs  nano.rs  normalizer.rs  result.rs
crates/sim/examples/: native_bench.rs
crates/sim/src/: amm.rs  arbitrageur.rs  bench.rs  curve_checks.rs  engine.rs  lib.rs  router.rs  runner.rs
crates/sim/tests/: integration.rs
programs/normalizer/src/: lib.rs
programs/starter/: Cargo.toml
programs/starter/src/: lib.rs
